@@ -259,6 +259,7 @@ enum CodecID {
     CODEC_ID_MSA1,
     CODEC_ID_TSCC2,
     CODEC_ID_MTS2,
+    CODEC_ID_CLLC,
 
     /* various PCM "codecs" */
     CODEC_ID_FIRST_AUDIO = 0x10000,     ///< A dummy id pointing at the start of audio codecs
